--- a/ride-fair/package.json
+++ b/ride-fair/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@web5/api": "^0.8.4",
+    "mapbox-gl": "^3.0.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
