--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@heroicons/react": "^2.1.3",
     "@web5/api": "^0.9.1",
     "mapbox-gl": "^3.0.1",
-    "next": "14.1.4",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
